# EspressoOS

./: .gitattributes  .gitignore  Cargo.toml  README.md  espflash.toml  partitions.csv  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bootloader/: Cargo.toml  build.rs
bootloader/src/: flash.rs  main.rs  multiboot2.rs  partition_table.rs  uart.rs
docs/: PRODUCTION-READINESS.md  SECURITY.md  ssh-design.md
docs/design/: remaining-phases.md
kernel/: Cargo.toml  build.rs
kernel/src/: main.rs  prelude.rs  session.rs  wifi_credentials.rs  wifi_credentials.rs.example
kernel/src/arch/: mod.rs
kernel/src/arch/xtensa/: context.rs  interrupts.rs  mod.rs  sync.rs  timer.rs
kernel/src/drivers/: ble.rs  crypto.rs  device.rs  flash.rs  gpio.rs  i2c.rs  mod.rs  power.rs  spi.rs  uart.rs  wifi.rs  wifi_store.rs
kernel/src/drivers/ssh/: auth.rs  channel.rs  config.rs  crypt.rs  crypto_rng.rs  crypto_smoke.rs  kex.rs  mod.rs  proto.rs
kernel/src/fs/: elf.rs  mod.rs  procfs.rs  ramfs.rs  sysfs.rs
kernel/src/fs/espfs/: mod.rs  wire.rs
kernel/src/fs/littlefs/: mod.rs
kernel/src/mm/: heap.rs  mod.rs  mpu.rs  psram_exec.rs
kernel/src/ota/: mod.rs  partition.rs
kernel/src/scheduler/: core_sync.rs  mod.rs  policy.rs  process.rs  task.rs
kernel/src/shell/: mod.rs  parser.rs  remote.rs
kernel/src/shell/commands/: mod.rs
kernel/src/syscall/: handler.rs  mod.rs  table.rs  trap.rs
kernel/src/vfs/: devfs.rs  file.rs  inode.rs  mod.rs  mount.rs  pipe.rs  socket.rs
tools/: build-userland.ps1
tools/mkimage/: README.md
tools/partition-gen/: partition_gen.py
tools/tests/: espfs_tests.py  logic_tests.py  run_all.py  ssh_proto_tests.py
userland/: Cargo.toml  README.md  user.x
userland/.cargo/: config.toml
userland/apps/: Cargo.toml
userland/libc/src/: lib.rs
